# evarobot

./: CMakeLists.txt  LICENSE  PROJECT_STRUCTURE.md  README.md  build_desktop.sh  package.xml
config/: gz_ros_bridge.yaml  rviz_config.rviz
doc/: .~lock.eva_robot_steps.odt#  eva_robot_steps.odt
evarobot/: .gitignore  CONTRIBUTING.md  build_deploy.sh
evarobot/evarobot_cpp_examples/: CMakeLists.txt
evarobot/evarobot_description/: package.xml
evarobot/evarobot_firmware/: CMakeLists.txt
evarobot/evarobot_firmware/firmware/evarobot_control/: evarobot_control.ino  evarobot_motors.h  evarobot_pid.h  evarobot_pwm.h
evarobot/evarobot_firmware/tests/: test_pid_feedback.py
evarobot/evarobot_hardware/: package.xml
evarobot/evarobot_hardware/evarobot_hardware/: __init__.py
evarobot/evarobot_motion/: package.xml
evarobot/evarobot_msgs/: package.xml
evarobot/evarobot_perception/: CMakeLists.txt
evarobot/evarobot_utils/: CMakeLists.txt
evarobot/evarobot_viz/: CMakeLists.txt
evarobot_bringup/: CMakeLists.txt  package.xml
evarobot_controller/: CMakeLists.txt  README.md  package.xml
evarobot_controller/config/: evarobot_controllers.yaml  teleop_twist_joy.yaml  twist_mux.yaml
evarobot_controller/docs/: TESTING_GUIDE.md
evarobot_controller/evarobot_controller/: __init__.py  joy_teleop_node.py  simple_controller.py
evarobot_controller/launch/: controller.launch.py  joystick_teleop.launch.py
evarobot_cpp_examples/: package.xml
evarobot_description/: CMakeLists.txt  README.md  package.xml
evarobot_description/docs/: GAZEBO_HARMONIC_MIGRATION.md
evarobot_description/launch/: gazebo.launch.py  gazebo_harmonic.launch.py
evarobot_description/rviz/: view_robot.rviz
evarobot_description/urdf/: evarobot.gazebo.xacro  evarobot.ros2_control.xacro  evarobot.urdf.xacro
evarobot_description/worlds/: empty.sdf  test_world.world
evarobot_firmware/: README.md  package.xml
evarobot_firmware/config/: joy_config.yaml
evarobot_firmware/docs/: SIMULATION_SETUP.md
evarobot_firmware/evarobot_firmware/: __init__.py  arduino_serial_com.py  joy_teleop_node.py  keyboard_control.py
evarobot_firmware/firmware/evarobot_control/: evarobot_config.h  evarobot_control.ino  evarobot_encoders.h  evarobot_pid.h  evarobot_serial_com.h
evarobot_firmware/launch/: joy_teleop.launch.py
evarobot_firmware/tests/: MOTOR_TEST_README.md  test_motor_serial.py  test_motors.ino  test_serial_com.py
evarobot_hardware/: CMakeLists.txt  package.xml  setup.py
evarobot_hardware/include/evarobot_hardware/: motor_controller.hpp
evarobot_localization/: CMakeLists.txt  package.xml
evarobot_mapping/: CMakeLists.txt  package.xml
evarobot_motion/: CMakeLists.txt
evarobot_msgs/: CMakeLists.txt
evarobot_navigation/: CMakeLists.txt  package.xml
evarobot_perception/: package.xml
evarobot_planning/: CMakeLists.txt  package.xml
evarobot_py_examples/: CMakeLists.txt  package.xml
evarobot_utils/: package.xml
evarobot_utils/scripts/bluetooth/: 99-ps4-controller.rules  README.md  bt-autopair.service  install_bt_autoconnect.sh  ps4_controller.sh
evarobot_viz/: package.xml
launch/: myrobot.launch.py
ldlidar/: CMakeLists.txt  README.md
ldlidar/src/ros2_node/: main.cpp
scripts/: frame_manager.py  joy_control.py  test.py  tf_publisher.py
src/: lidar_transform.cpp  test_node.cpp
test/: frames_2025-02-11_13.22.15.gv  frames_2025-02-18_09.10.02.gv  frames_2025-02-18_09.37.34.gv  frames_2025-02-20_13.58.00.gv  frames_2025-03-09_12.58.02.gv
urdf/: my_robot.sdf  my_robot.urdf  robot_wheeled.sdf
