<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>evarobot_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for EvaRobot real and simulated robot</description>
  <maintainer email="kevin.ejem18@gmail.com">Kevin Medrano Ayala</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>evarobot_description</exec_depend>
  <exec_depend>evarobot_controller</exec_depend>
  <exec_depend>evarobot_localization</exec_depend>
  <exec_depend>evarobot_navigation</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
